--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Audio Sync as a Service</h4></center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/iras.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/project/recommender.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               
               <div class="portfolio-links">
