--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Hi! I'm an aspiring software engineer with an interest in cloud infrastructure and systems. 
-            Through consistent exposure to different infrustructure enviorments and an education in computer engineering, I've developed an understanding of how the entire technological stack comes together - from microscopic NAND gates to higher level code. 
+            Through consistent exposure to different infrastructure enviorments and an education in computer engineering, I've developed an understanding of how the entire technological stack comes together - from microscopic NAND gates to higher level code. 
              I have built up a large breadth of infrastructure experience focusing on networking, distributed systems, and cloud computing. I've worked with a lot of companies and gained experience in designing and implementing robust and scalable infrastructures leveraging technologies such as Amazon Web Services (AWS) and Kubernetes.
           </p>
           <div class="row">
